# InvoAI

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-desktop.yml
reports/: acceptance-checklist.csv  backfill-invoice-files-2026-03-03T09-08-17-273Z.csv  qa-runs.csv  qa-smoke.csv  sample-validation-2026-03-03T08-51-11-434Z.csv
scripts/: qa-check.mjs
server/: .env.example  init.sql  next.config.js  package-lock.json  package.json
server/app/: page.tsx
server/app/api/ai/chat/: route.ts
server/app/api/ai/recognize/: route.ts
server/app/api/auth/login/: route.ts
server/app/api/auth/me/: route.ts
server/app/api/auth/register/: route.ts
server/app/api/init/: route.ts
server/app/api/invoices/: route.ts
server/lib/: ai-proxy.ts  auth.ts  db.ts  response.ts
server/scripts/: backfill-invoice-files.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  invoice.rs  mod.rs
src/components/auth/: LoginPage.tsx
src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageList.tsx
src/components/layout/: AppLayout.tsx
src/components/preview/: ImageViewer.tsx  InvoiceDetail.tsx  PdfViewer.tsx  PreviewPanel.tsx
src/components/sidebar/: FileTree.tsx  InvoiceList.tsx  Sidebar.tsx
src/hooks/: useAuth.ts  useChat.ts  useInvoices.ts
src/lib/: ai.ts  api.ts  db.ts  utils.ts
src/styles/: globals.css
src/types/: invoice.ts
test-data/invoice-samples/: README.md
(+3 files in other folders)
